--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "rest",
-	"version": "1.3.1-next",
+	"version": "2.0.0-pre",
 	"main": "./browser.js",
 	"moduleType": ["amd", "node"],
 	"dependencies": {
