--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rest",
-	"version": "1.3.1-next",
+	"version": "2.0.0-pre",
 	"description": "RESTful HTTP client library",
 	"keywords": ["rest", "http", "client", "rest-template", "spring", "cujojs"],
 	"licenses": [
